chore: change hibernate mode to validate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=EncurtaUrl
 
-# Importante: antes de executar o projeto, coloque a URL do seu servidor aqui.
-# Os links completos serão salvos no banco de dados com base na URL abaixo.
+# Importante: antes de executar o projeto, coloque a URL do seu servidor aqui (neste formato).
 encurtaurl.base-url=http://127.0.0.1:8080
 
-spring.datasource.url=jdbc:postgresql://localhost/db_sistema
-spring.datasource.username=postgres
-
-# Use variáveis de ambiente, essa senha é somente para testes!
-spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
