chore: update application.properties and .env template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=EncurtaUrl
 
-# Importante: antes de executar o projeto, coloque a URL do seu servidor aqui (neste formato).
-encurtaurl.base-url=http://127.0.0.1:8080
-
-spring.datasource.url=jdbc:postgresql://localhost/${DB_NAME}
+spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+encurtaurl.base-url=${ENCURTAURL_BASE_URL}
+encurtaurl.jwt-secret=${JWT_SECRET}
